feat: 직군 목록 삭제 기능 구현

--- a/client/src/components/common/editable-card/EditableCard.scss
+++ b/client/src/components/common/editable-card/EditableCard.scss
@@ -8,6 +8,21 @@
   transition: 0.5s;
   position: relative;
 
+  &.job_group {
+    background-color: #E7E8EA;
+    margin: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 8px;
+
+    p {
+      font-size: 14px;
+      line-height: 16px;
+    }
+  }
+
   img {
     width: 100%;
   }
