--- a/client/src/components/common/editable-card/EditableCard.scss
+++ b/client/src/components/common/editable-card/EditableCard.scss
@@ -23,6 +23,11 @@
     }
   }
 
+  &.recruit_notice {
+    width: 100%;
+    height: 104px;
+  }
+
   img {
     width: 100%;
   }
@@ -34,7 +39,9 @@
     opacity: .3;
     position: absolute;
     top: 0;
+    left: 0;
     background: black;
+    box-sizing: border-box;
   }
 
   button {
