--- a/client/src/components/common/editable-card/EditableCard.scss
+++ b/client/src/components/common/editable-card/EditableCard.scss
@@ -28,6 +28,14 @@
     height: 104px;
   }
 
+  &.success_story {
+    width: 48%;
+    height: 405px;
+    background-color: #44474b;
+    padding: 24px;
+    margin-bottom: 24px;
+  }
+
   img {
     width: 100%;
   }
@@ -55,5 +63,13 @@
     color: white;
     border: none;
     cursor: pointer;
+
+    &.success_story {
+      width: 100px;
+      height: 50px;
+      left: calc(50% - 50px);
+      top: calc(50% - 25px);
+      font-size: 25px;
+    }
   }
 }
