--- a/client/src/components/common/editable-card/EditableCard.scss
+++ b/client/src/components/common/editable-card/EditableCard.scss
@@ -36,6 +36,20 @@
     margin-bottom: 24px;
   }
 
+  &.youtube_video {
+    width: 100%;
+    height: 360px;
+    position: relative;
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+
   img {
     width: 100%;
   }
@@ -64,7 +78,7 @@
     border: none;
     cursor: pointer;
 
-    &.success_story {
+    &.big {
       width: 100px;
       height: 50px;
       left: calc(50% - 50px);
