--- a/client/src/components/common/card-add-form/CardAddForm.scss
+++ b/client/src/components/common/card-add-form/CardAddForm.scss
@@ -5,12 +5,14 @@
 
   form {
     background: #E7E8EA;
-    height: 96px;
+    min-height: 96px;
     width: 240px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 12px;
+    padding: 10px 15px 10px 15px;
+
 
     input {
       border: none;
@@ -18,6 +20,10 @@
       border-radius: 8px;
       height: 32px;
       padding: 0 10px;
+
+      &:not(&:first-child) {
+        margin-top: 5px;
+      }
     }
 
     .button_wrapper {
