--- a/client/src/components/common/editable-card/EditableCard.scss
+++ b/client/src/components/common/editable-card/EditableCard.scss
@@ -86,4 +86,30 @@
       font-size: 25px;
     }
   }
+
+  .button_wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+
+    button {
+      position: initial;
+    }
+
+    .checkbox {
+      margin-left: 15px;
+
+      p {
+        line-height: 24px;
+        color: white;
+        font-weight: bold;
+        text-shadow: 1px 1px black;
+      }
+    }
+  }
 }
