feat: 채용 공고 추가 시 공고 정보 자동 입력

--- a/client/src/components/common/recruit-notice-add-form/RecruitNoticeAddForm.scss
+++ b/client/src/components/common/recruit-notice-add-form/RecruitNoticeAddForm.scss
@@ -7,23 +7,8 @@
   border-radius: 8px;
   display: flex;
 
-  .form_section {
-    display: flex;
-
-    .registration_date {
-      display: flex;
-      justify-content: right;
-      align-items: end;
-      width: 80%;
-
-      .right_wrapper {
-        padding-left: 10%;
-      }
-    }
-
-    .input_wrapper {
-      display: flex;
-    }
+  form {
+    width: 100%;
   }
 
   input {
